# gpui-shell

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  claude-docs.yml  docs.yml  labeler.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: args.rs  bar.rs  bar2.rs  bar_poc.rs  config.rs  control_center.rs  keybinds.rs  main.rs  osd.rs  panel.rs  state.rs
crates/app/src/bar/: bar.rs  config.rs  mod.rs
crates/app/src/bar/modules/: mod.rs  registry.rs  style.rs
crates/app/src/bar/modules/active_window/: config.rs  mod.rs
crates/app/src/bar/modules/battery/: config.rs  mod.rs
crates/app/src/bar/modules/clock/: config.rs  mod.rs
crates/app/src/bar/modules/keyboard_layout/: config.rs  mod.rs
crates/app/src/bar/modules/launcher_btn/: config.rs  mod.rs
crates/app/src/bar/modules/mpris/: config.rs  mod.rs  panel.rs
crates/app/src/bar/modules/settings/: config.rs  mod.rs
crates/app/src/bar/modules/sysinfo/: config.rs  mod.rs  panel.rs
crates/app/src/bar/modules/tray/: config.rs  mod.rs
crates/app/src/bar/modules/workspaces/: config.rs  mod.rs
crates/app/src/bar/widgets/: active_window.rs  battery.rs  clock.rs  keyboard_layout.rs  launcher_btn.rs  mod.rs  registry.rs  style.rs  tray.rs  workspaces.rs
crates/app/src/bar/widgets/mpris/: mod.rs  panel.rs
crates/app/src/bar/widgets/settings/: mod.rs
crates/app/src/bar/widgets/sysinfo/: mod.rs
crates/app/src/config/: bar.rs  launcher.rs  mod.rs  osd.rs  persistence.rs  theme_persistence.rs
crates/app/src/config/theme/: config.rs  mod.rs  persistence.rs
crates/app/src/control_center/: bluetooth.rs  config.rs  connectivity_toggles.rs  icons.rs  mod.rs  power.rs  quick_toggles.rs  slider.rs  sliders.rs  tooltip.rs  wifi.rs
crates/app/src/ipc/: messages.rs  mod.rs  service.rs
crates/app/src/launcher/: config.rs  mod.rs  view.rs
crates/app/src/launcher/modules/: mod.rs
crates/app/src/launcher/modules/apps/: config.rs  mod.rs
crates/app/src/launcher/modules/help/: config.rs  mod.rs
crates/app/src/launcher/modules/services/: config.rs  mod.rs
crates/app/src/launcher/modules/shell/: config.rs  mod.rs
crates/app/src/launcher/modules/theme/: config.rs  mod.rs
crates/app/src/launcher/modules/wallpaper/: config.rs  mod.rs
crates/app/src/launcher/modules/web/: config.rs  mod.rs
crates/app/src/launcher/modules/workspaces/: config.rs  mod.rs
crates/app/src/launcher/views/: apps.rs  help.rs  mod.rs  shell.rs  theme.rs  themes.rs  wallpaper.rs  web.rs  workspaces.rs
crates/app/src/notification/: card.rs  config.rs  mod.rs  pannel.rs  popup.rs  widget.rs
crates/app/src/old/control_center/: icons.rs  mod.rs  sliders.rs  wifi.rs
crates/app/src/old/launcher/: mod.rs  view.rs
crates/app/src/old/launcher/views/: shell.rs  web.rs
crates/app/src/old/widgets/: active_window.rs  clock.rs  keyboard_layout.rs  mod.rs  registry.rs
crates/app/src/old/widgets/sysinfo/: mod.rs  panel.rs
crates/app/src/osd/: config.rs  mod.rs
crates/app/src/widgets/: active_window.rs  battery.rs  clock.rs  keyboard_layout.rs  launcher_btn.rs  mod.rs  registry.rs  settings.rs  tray.rs  workspaces.rs
crates/app/src/widgets/settings/: mod.rs
crates/app/src/widgets/sysinfo/: mod.rs  panel.rs
crates/assets/src/: assets.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs  status.rs  themes.rs  watcher.rs
crates/services/src/applications/: icons.rs  mod.rs
crates/services/src/audio/: mod.rs
crates/services/src/bluetooth/: dbus.rs  mod.rs  types.rs
crates/services/src/brightness/: mod.rs
crates/services/src/compositor/: hyprland.rs  mod.rs  niri.rs  types.rs
crates/services/src/mpris/: dbus.rs  mod.rs
crates/services/src/network/: mod.rs  nm.rs  types.rs
crates/services/src/network/dbus/: access_point.rs  active_connection.rs  device.rs  mod.rs  nm.rs  settings.rs  statistics.rs
crates/services/src/network/dbus/device/: wired.rs  wireguard.rs  wireless.rs
crates/services/src/notification/: mod.rs
crates/services/src/privacy/: mod.rs
crates/services/src/shell/: mod.rs
crates/services/src/sysinfo/: mod.rs
crates/services/src/tray/: dbus.rs  mod.rs
crates/services/src/upower/: dbus.rs  mod.rs
crates/services/src/wallpaper/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: ui.rs
docs/: CONFIG.md  INSTALL.md  astro.config.mjs  package.json
nix/: build.nix  shell.nix
scripts/: notification_test.sh  release.sh
src/: bar.rs  launcher.rs  main.rs  theme.rs
src/examples/: listing.rs  menu.rs  mod.rs  paint.rs  popover.rs  scroll.rs  shadow.rs  tab.rs  tree.rs  win_shadow.rs
src/launcher/: item.rs  mod.rs  view.rs
src/launcher/views/: apps.rs  control.rs  help.rs  mod.rs  monitors.rs  system.rs  workspaces.rs
src/services/: applications.rs  audio.rs  mod.rs  privacy.rs  sysinfo.rs
src/services/bluetooth/: dbus.rs  mod.rs
src/services/compositor/: hyprland.rs  mod.rs  types.rs
src/services/network/: dbus.rs  mod.rs
src/services/upower/: dbus.rs  mod.rs
src/ui/: control_center.rs  mod.rs  panel.rs
src/widgets/: battery.rs  clock.rs  launcher_btn.rs  mod.rs  registry.rs  systray.rs  workspaces.rs
v1/src/: main.rs
v1/src/ui/: panel.rs
(+40 files in other folders)
