[package]
name = "projectname"
version = "1.0.0"
edition = "2024"

[features]
default = ["wayland"]
wayland = [
  "gpui/wayland",
  "calloop-wayland-source",
  "wayland-backend",
  "wayland-client",
  "wayland-cursor",
  "wayland-protocols",
  "wayland-protocols-plasma",
  "wayland-protocols-wlr"
]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
# example = "1.0.0"
calloop-wayland-source = { version = "0.4.1", optional = true }
wayland-backend = { version = "0.3.3", features = [
    "client_system",
    "dlopen",
], optional = true }
wayland-client = { version = "0.31.11", optional = true }
wayland-cursor = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = [
    "client",
    "staging",
    "unstable",
], optional = true }
wayland-protocols-plasma = { version = "0.3.9", features = [
    "client",
], optional = true }
wayland-protocols-wlr = { version = "0.3.9", features = [
    "client",
], optional = true }
gpui-macros = "0.2.2"
# lyon = {version = "1.0.16", features = ["extra"]}
hyprland = "0.4.0-beta.3"
system-tray = "0.8"
tokio = { version = "1", features = ["rt", "sync"] }
freedesktop-icons = "0.2"
serde = "1.0.228"
anyhow = "1.0.100"
serde_json = "1.0.149"
# schemars = "1.2.1"
itertools = "0.14.0"
log = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2"
