[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/andre-brandao/zed", branch = "fix/target_dispay", features = ["wayland"] }
ui = { path = "crates/ui" }
assets = { path = "crates/assets" }
services = { path = "crates/services" }

anyhow = "1.0.100"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = { version = "0.3.30", default-features = false }
futures-signals = "0.3.34"
futures = "0.3.31"
zbus = "5.5.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
itertools = "0.14.0"
chrono = "0.4.39"
hyprland = "0.4.0-beta.2"
niri-ipc = "=25.11.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
opt-level = "z"
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
