[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
zbus.workspace = true
futures-signals.workspace = true
tracing.workspace = true
itertools.workspace = true
chrono.workspace = true
hyprland.workspace = true
tokio.workspace = true

inotify = "0.11"
nix = { version = "0.29", features = ["user", "poll"] }
pipewire = "0.8"
serde = "1.0"
sysinfo = "0.35.1"
udev = "0.9"
